@@ -84,7 +84,11 @@ function doc_droplist_count($l_group_id, $language_id, $g) {
 		print "<form name=\"langchoice\" action=\"index.php?group_id=".$l_group_id."\" method=\"post\"><table border=\"0\">"
 			." <tr><td valign=\"middle\"><strong>".$Language->getText('general','language')." </strong></td>"
 			." <td valign=\"middle\"><select name=\"language_id\">\n\n";
-		print "<option value=\"*\">".$Language->getText('docman_display_doc','all_languages')." </option>";
+		if ($language_id == $grow['language_id']) {
+			print "<option value=\"*\" selected=\"selected\">".$Language->getText('docman_display_doc','all_languages')." </option>";
+		} else {
+			print "<option value=\"*\">".$Language->getText('docman_display_doc','all_languages')." </option>";
+		}
 		while($grow = db_fetch_array($gresult)) {
 
 			if ($language_id == $grow['language_id']) {
@@ -111,5 +115,10 @@ function doc_get_state_box($checkedval='xzxz') {
 function docman_footer($params) {
 	site_project_footer($params);
 }
+
+// Local Variables:
+// mode: php
+// c-file-style: "bsd"
+// End:
 
 ?>
